# landingpig

./: Cargo.toml  README.md  install.sh  uninstall.sh
src/: app.rs  main.rs
src/api/: anthropic.rs  error.rs  mod.rs
src/config/: mod.rs
src/fs/: context.rs  mod.rs  picker.rs
src/state/: mod.rs
src/ui/: banner.rs  boot.rs  dashboard.rs  input.rs  mod.rs  picker.rs  theme.rs
