[package]
name = "landingpig"
version = "0.1.0"
edition = "2021"
description = "Terminal-based AI agent harness for landing page engineering"
authors = ["landingpig contributors"]
license = "MIT"
rust-version = "1.75"

[[bin]]
name = "landingpig"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP / Anthropic API
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
bytes = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
glob = "0.3"
walkdir = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true
